tests/negative/comptime/use-rt.orng
fn main() -> Int {
    let x: Int = 4
    let y: Int = comptime x + 4
    y
}